Início do Cabeça Livre, configurações iniciais e tradução da interface

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,23 @@ layout: default
             <div class='col-sm-6'>
                 <p class="blog-post-date" itemprop="datePublished" content="{{ page.date | date: "%Y-%m-%d" }}">
                     <a href="{{ page.date | date: '/%Y/%m/%d/' | prepend: site.baseurl | replace: '//', '/' }}">
-                        {{ page.date | date: "%b %-d, %Y" }}
+                        {{ page.date | date: "%d de" }}
+                        {% assign m = page.date | date: "%-m" %}
+                        {% case m %}
+                        {% when '1' %}Janeiro
+                        {% when '2' %}Fevereiro
+                        {% when '3' %}Março
+                        {% when '4' %}Abril
+                        {% when '5' %}Maio
+                        {% when '6' %}Junho
+                        {% when '7' %}Julho
+                        {% when '8' %}Agosto
+                        {% when '9' %}Setembro
+                        {% when '10' %}Outubro
+                        {% when '11' %}Novembro
+                        {% when '12' %}Dezembro
+                        {% endcase %}
+                        {{ page.date | date: "de %Y" }}
                     </a>
                 </p>
                 <meta itemprop="dateModified" content="{{ page.last_modified_at | date: "%Y-%m-%d" }}" />
@@ -49,7 +65,7 @@ layout: default
         {% if site.addthis_profile_id %}
             <!-- AddThis Sharing Buttons -->
             <div class="gap"></div>
-            <h2>Did you like it? What about sharing?</h2>
+            <h2>Gostou? Que tal compartilhar?</h2>
             <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
                 <a class="addthis_button_facebook"></a>
                 <a class="addthis_button_twitter"{% if site.twitter_username %} data-via="{{ site.twitter_username }}"{% endif %}></a>
