--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav m-auto">
-                {% if site.navigation %}
+                <!--{% if site.navigation %}
                     {% for link in site.navigation %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
@@ -24,7 +24,7 @@
                             </li>
                         {% endif %}
                     {% endfor %}
-                {% endif %}
+                {% endif %}-->
             </ul>
             <form action="{% if site.google.cse_id %}{{ "/search/" | prepend: site.baseurl }}{% else %}https://www.google.com/search{% endif %}" class="form-inline" id="navbar-search-form" method="get" role="search">
                 {% if site.google.cse_id %}
@@ -32,7 +32,7 @@
                     <input type="hidden" name="as_sitesearch" value="{{ site.baseurl | prepend: site.url }}" />
                 {% endif %}
                 <div class="input-group">
-                    <input class="form-control search-field" id="navbar-search-field" name="q" placeholder="Search" type="text" aria-label="Search">
+                    <input class="form-control search-field" id="navbar-search-field" name="q" placeholder="Pesquisar" type="text" aria-label="Pesquisar">
                     <div class="input-group-append">
                         <button class="btn btn-secondary btn-number search-button" id="navbar-search-button" type="submit">
                             <i class="fa fa-search"></i>
