--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="card mb-3">
     <div class="card-header">
-        <h3><a name="about"></a>About</h3>
+        <h3><a name="about"></a>Sobre</h3>
     </div>
     <div class="card-body" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
         <p class='text-center' itemprop='logo' itemscope itemtype='http://schema.org/ImageObject'>
@@ -18,10 +18,10 @@
         <p class="text" itemprop="description">
             {{ site.description }}
         </p>
-    </div><!-- .card-body -->
-</div><!-- .card -->
+    <!-- </div> --><!-- .card-body -->
+<!-- </div> --><!-- .card -->
 
-<div class="card mb-3">
+<!-- <div class="card mb-3">
     <div class="card-header">
         <h3><a name="author"></a>Author</h3>
     </div>
@@ -45,7 +45,7 @@
             {% if site.author.email %}
                 <li><a href="mailto:{{ site.author.email }}" itemprop="email"><i class="fas fa-envelope"></i> {{ site.author.email }}</a></li>
             {% endif %}
-        </ul>
+        </ul>-->
 
         {% if site.addthis_profile_id %}
             <!-- AddThis Follow Buttons -->
