--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,13 +51,12 @@
     {% endif %}
 
     <!-- Favicons (made with RealFaviconGenerator.net) -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/favicons/apple-touch-icon.png?v=3" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/favicons/favicon-32x32.png?v=3" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/favicons/favicon-16x16.png?v=3" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
-    <link rel="manifest" href="{{ "/assets/favicons/site.webmanifest?v=3" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
-    <link rel="shortcut icon" href="{{ "/assets/favicons/favicon.ico?v=3" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ "/apple-touch-icon.png" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ "/favicon-32x32.png" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ "/favicon-16x16.png" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
+    <link rel="manifest" href="{{ "/site.webmanifest" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
+    <link rel="mask-icon" href="{{ "/safari-pinned-tab.svg" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}" color="#009688">
     <meta name="msapplication-TileColor" content="#009688">
-    <meta name="msapplication-config" content="{{ "/assets/favicons/browserconfig.xml?v=3" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
     <meta name="theme-color" content="#009688">
 
     <!-- CSS -->
