--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
     <div class="card-body" itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
         <p class='text-center' itemprop='logo' itemscope itemtype='http://schema.org/ImageObject'>
             <a href='{{ site.image | prepend: site.baseurl | replace: "//", "/" | prepend: site.url }}' itemprop='url'>
-                <img src='{{ site.image | prepend: site.baseurl | replace: "//", "/" | prepend: site.url }}' class='img-fluid img-thumbnail'>
+                <img src='{{ site.image | prepend: site.baseurl | replace: "//", "/" | prepend: site.url }}' class='img-fluid img-thumbnail rounded-circle' style='max-width: 150px'>
             </a>
             <!--<meta itemprop="width" content=""/>--><!-- TODO Image width -->
             <!--<meta itemprop="height" content=""/>--><!-- TODO Image height -->
