--- a/_includes/nota.html
+++ b/_includes/nota.html
@@ -1,4 +1,4 @@
-<div class="alert alert-info" role="alert">
+<div class="alert alert-info no-ads-here" role="alert">
     <div class="media">
         <img class="mr-3" src="/cabecalivre.png" style="max-width: 64px;">
         <div class="media-body">
