--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,23 +51,25 @@
     {% endif %}
 
     <!-- Favicons (made with RealFaviconGenerator.net) -->
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ "/apple-touch-icon.png" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ "/favicon-32x32.png" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ "/favicon-16x16.png" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
-    <link rel="manifest" href="{{ "/site.webmanifest" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
-    <link rel="mask-icon" href="{{ "/safari-pinned-tab.svg" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}" color="#009688">
-    <meta name="msapplication-TileColor" content="#009688">
-    <meta name="theme-color" content="#009688">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ "/apple-touch-icon.png?v=2" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ "/favicon-32x32.png?v=2" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ "/favicon-16x16.png?v=2" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
+    <link rel="manifest" href="{{ "/site.webmanifest?v=2" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
+    <link rel="mask-icon" href="{{ "/safari-pinned-tab.svg?v=2" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}" color="#424242">
+    <link rel="shortcut icon" href="{{ "/favicon.ico?v=2" | prepend: site.baseurl | replace: '//', '/' | prepend: site.url }}">
+    <meta name="msapplication-TileColor" content="#757575">
+    <meta name="theme-color" content="#424242">
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
     {% if jekyll.environment == "production" %}
         <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
-        <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.2/dist/css/bootstrap-material-design.min.css" integrity="sha384-dI6l3oYG+wVvjfdlixt6+FMddrb9+uejLU/wMhQFKklk7RDtSDBfe/XuF1dkcgVV" crossorigin="anonymous">
+        <!--<link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.2/dist/css/bootstrap-material-design.min.css" integrity="sha384-dI6l3oYG+wVvjfdlixt6+FMddrb9+uejLU/wMhQFKklk7RDtSDBfe/XuF1dkcgVV" crossorigin="anonymous">-->
+        <link rel="stylesheet" href="{{ "/libs/bootstrap-material-design/4.1.2/custom/bootstrap-material-design.min.css" | prepend: site.baseurl }}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.11.2/css/all.min.css" integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous">
     {% else %}
         <!--<link rel="stylesheet" href="{{ "/libs/bootstrap/4.3.1/css/bootstrap.min.css" | prepend: site.baseurl }}">-->
-        <link rel="stylesheet" href="{{ "/libs/bootstrap-material-design/4.1.2/css/bootstrap-material-design.css" | prepend: site.baseurl }}">
+        <link rel="stylesheet" href="{{ "/libs/bootstrap-material-design/4.1.2/custom/bootstrap-material-design.css" | prepend: site.baseurl }}">
         <link rel="stylesheet" href="{{ "/libs/font-awesome/5.11.2/css/all.css" | prepend: site.baseurl }}">
     {% endif %}
     <link rel="stylesheet" href="{{ "/assets/css/syntax.css" | prepend: site.baseurl }}">
