--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -152,3 +152,12 @@
         </div><!-- .col-xs-12 -->
     </div><!-- .row -->
 {% endif %}
+
+<div class="card mb-3">
+    <div class="card-header">
+        <h3>Anúncio</h3>
+    </div>
+    <div class="card-body">
+        {% include a-ads.html id="1464874" %}
+    </div><!-- .card-body -->
+</div><!-- .card -->
