--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,9 +58,13 @@ layout: default
             {% include adsense.html id="content_ad_unit_1" ad_slot=site.google.adsense.content_ad_unit_1 %}
         {% endif %}
 
+        {% include a-ads.html id="1465064" %}
+
         <div itemprop="articleBody mainEntity">
             {{ content }}
         </div>
+
+        {% include a-ads.html id="1465103" %}
 
         {% if site.addthis_profile_id %}
             <!-- AddThis Sharing Buttons -->
