--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -83,7 +83,7 @@ layout: default
         {% if site.disqus_shortname and jekyll.environment == "production" %}
             <!-- Disqus -->
             <div class="gap"></div>
-            <h2>Comments</h2>
+            <h2>Comentários</h2>
             <div id="disqus_thread"></div>
             <script>
                 var disqus_config = function () {
