--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -401,3 +401,9 @@ https://pro.propeller.in/components/floating-button.php
     color: inherit;
     text-decoration: underline;
 }
+
+/* Parler */
+
+.custom_button_parler_follow:hover {
+    text-decoration: none;
+}
